# MPLABExtensionsTest

./: README.md
same54_tcpip/same54 TCPIP Datastream/: main.c
same54cu_tcp_datastream/same54_cu_tcpip/firmware/same54_cu_tcpip.X/: CMakeLists.txt  mcc-manifest-autosave.yml  same54_cu_tcpip.mc3
same54cu_tcp_datastream/same54_cu_tcpip/firmware/same54_cu_tcpip.X/.cmakefiles_default/: emissions.cmake  files.cmake  settings.cmake  toolchain.cmake  xc32-rules.cmake
same54cu_tcp_datastream/same54_cu_tcpip/firmware/same54_cu_tcpip.X/_build_default/: .clangd  .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  default.elf  default.hex
same54cu_tcp_datastream/same54_cu_tcpip/firmware/same54_cu_tcpip.X/_build_default/.cache/clangd/index/: CryptoLib_CRT_pb.h.1F4A83C28714B300.idx  CryptoLib_ClearFlags_pb.h.6690046E2E859B8A.idx  CryptoLib_Comp_pb.h.41ABA15257686496.idx  CryptoLib_CondCopy_pb.h.36D208785681CBF4.idx  CryptoLib_Div_pb.h.9FD1A8DA1F85427D.idx  CryptoLib_ExpMod_pb.h.FE7D7741178AAE8F.idx  CryptoLib_FastCopy_pb.h.778A2C903D6D1764.idx  CryptoLib_Fill_pb.h.188A17B33C8C73C6.idx  CryptoLib_Fmult_pb.h.C79847481C860DE2.idx  CryptoLib_GCD_pb.h.86D2E0298B78FA81.idx  CryptoLib_GF2NEcDsa_pb.h.5E5714499434D112.idx  CryptoLib_GF2NEccAdd_pb.h.E5DD72C24BBD4C54.idx  CryptoLib_GF2NEccConv_pb.h.A460A414ABDE6E87.idx  CryptoLib_GF2NEccDbl_pb.h.62150A03DAB6F4C7.idx  CryptoLib_GF2NEccMul_pb.h.F0C7E6C89E4B6BEE.idx  CryptoLib_Hardware_pb.h.D64834F8D894650A.idx  CryptoLib_Headers_pb.h.515DC6FE86841562.idx  CryptoLib_JumpTable_pb.h.66D44845F3BB2D72.idx  CryptoLib_PrimeGen_pb.h.0A55DC4C552FD5DE.idx  CryptoLib_Rc_pb.h.C979183A71548EE4.idx  CryptoLib_RedMod_pb.h.AC0F5AC0D2598797.idx  CryptoLib_Rng_pb.h.FFC45C6DD3B64359.idx  CryptoLib_SelfTest_pb.h.2D5A2C01A70B442E.idx  CryptoLib_Services_pb.h.3EF8DE4A3BA85627.idx  CryptoLib_Smult_pb.h.7B9EF775F1FD5531.idx  CryptoLib_Square_pb.h.62CC23CCF19C6C24.idx  CryptoLib_Swap_pb.h.067C806E5EE9B163.idx  CryptoLib_ZpEcDsa_pb.h.C39B042E7CB0DB76.idx  CryptoLib_ZpEccAddSub_pb.h.1976625D66E22FB9.idx  CryptoLib_ZpEccAdd_pb.h.851B34870FFE1B81.idx  CryptoLib_ZpEccConv_pb.h.A1E32E788C3446F7.idx  CryptoLib_ZpEccDbl_pb.h.B30E34A8AA338EE6.idx  CryptoLib_ZpEccMul_pb.h.C88B85370289D643.idx  CryptoLib_ZpEccQuickDualMul_pb.h.F68E2185BD31951A.idx  CryptoLib_cf_pb.h.A1F97AD91AA349AF.idx  CryptoLib_mapping_pb.h.4EF633F25B2F7198.idx  CryptoLib_typedef_pb.h.981BF0CD59629222.idx  _gmac_dcpt_lists.h.00BF98AC0A748DB2.idx  ac.h.2D00F7DBB0A7AC74.idx  ac.h.F47C53324794F78F.idx  (+459 more)
same54cu_tcp_datastream/same54_cu_tcpip/firmware/same54_cu_tcpip.X/nbproject/: configurations.xml
